
SUBDIRS = \
	_bits \
	stream \
	net

libbloompp_includedir = $(includedir)/bloom++
libbloompp_include_HEADERS = \
	any.h \
	debug.h \
	doxygen.h \
	hash_table.h \
	list.h \
	log.h \
	set.h \
	shared_ptr.h \
	signal.h \
	string.h \
	time.h \
	vector.h \
	thread.h \
	mutex.h \
	condition_variable.h \
	timer.h \
	mt_hash_table.h \
	mt_list.h \
	mt_set.h \
	exception.h \
	unique_ptr.h
