

libbloompp_bits_includedir = $(includedir)/bloom++/_bits
libbloompp_bits_include_HEADERS = \
	c++config.h \
	list_t.h \
	list_iterable_t.h \
	list_iterator_t.h \
	hash_functions.h \
	hash_table_t.h \
	debug.h \
	vector_t.h \
	vector_iterator_t.h \
	mt_list_iterator_t.h \
	char_traits.h \
	string_t.h \
	traits.h \
	set_t.h \
	mt_store.h

